# mechalab

./: README.md  pyproject.toml
app/: calibrating.py  config.py  main.py  recording.py  replaying.py  teleoperating.py  train.py
app/features/: teleoperate.py
app/services/: websocket_manager.py
scripts/: run.py
